Fix instructor photo sizes on mobile devices
Added profile image sizing to the smaller mobile breakpoint (max-width: 576px) to ensure uniform photo sizes on phones. Set to 90x90 pixels for optimal display on smaller screens.

--- a/style.css
+++ b/style.css
@@ -190,6 +190,10 @@ main {
         text-align: center !important;
         margin-top: 10px;
     }
+    .educator-box .profile-img {
+        width: 90px;
+        height: 90px;
+    }
 }
 
 .navbar-toggler {
